Fixed styling on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,10 +11,6 @@
     user-select: none;
 }
 
-body {
-    overflow: hidden;
-}
-
 h1,
 h2,
 h3,
@@ -27,13 +23,12 @@ h6 {
 }
 
 #background {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     z-index: -1;
     top: 0;
     left: 0;
-    overflow: hidden;
 }
 
 #mainCard {
@@ -111,6 +106,7 @@ h6 {
     position: absolute;
     bottom: 100%;
     right: 0;
+    max-width: 80vw;
     transition: opacity var(--hover-transition-duration) ease-out;
     opacity: 0;
 }
